[gd_scene load_steps=35 format=3 uid="uid://d3lg3j7h03coh"]

[ext_resource type="Script" path="res://Scripts/Charactors/slime.gd" id="1_0knef"]
[ext_resource type="Texture2D" uid="uid://dpomjxheqf5dx" path="res://brackeys_platformer_assets/sprites/slime_green.png" id="1_faeu7"]
[ext_resource type="Texture2D" uid="uid://citw5xth0jysd" path="res://brackeys_platformer_assets/sprites/slime_purple.png" id="2_4vfae"]
[ext_resource type="AudioStream" uid="uid://cvditavj6s02d" path="res://brackeys_platformer_assets/sounds/hurt.wav" id="3_lbx1p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6hyh6"]
atlas = ExtResource("2_4vfae")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl5rx"]
atlas = ExtResource("2_4vfae")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiafo"]
atlas = ExtResource("2_4vfae")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojgc4"]
atlas = ExtResource("2_4vfae")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4goq"]
atlas = ExtResource("2_4vfae")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sudo"]
atlas = ExtResource("2_4vfae")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_drtcw"]
atlas = ExtResource("2_4vfae")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_44r8i"]
atlas = ExtResource("2_4vfae")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_id1cp"]
atlas = ExtResource("2_4vfae")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryyni"]
atlas = ExtResource("2_4vfae")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyy0f"]
atlas = ExtResource("2_4vfae")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_edd0e"]
atlas = ExtResource("2_4vfae")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhxx2"]
atlas = ExtResource("2_4vfae")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_itvxo"]
atlas = ExtResource("2_4vfae")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajqgc"]
atlas = ExtResource("2_4vfae")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t36hk"]
atlas = ExtResource("2_4vfae")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wa1y"]
atlas = ExtResource("1_faeu7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx4td"]
atlas = ExtResource("1_faeu7")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_501by"]
atlas = ExtResource("1_faeu7")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_baj4e"]
atlas = ExtResource("1_faeu7")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3n66"]
atlas = ExtResource("1_faeu7")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0muf"]
atlas = ExtResource("1_faeu7")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_24fpl"]
atlas = ExtResource("1_faeu7")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8q0u"]
atlas = ExtResource("1_faeu7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3a30"]
atlas = ExtResource("1_faeu7")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t13lm"]
atlas = ExtResource("1_faeu7")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yd2j"]
atlas = ExtResource("1_faeu7")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yjhe"]
atlas = ExtResource("1_faeu7")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_wh0lr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hyh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl5rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiafo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojgc4")
}],
"loop": false,
"name": &"BombBorn",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4goq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sudo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drtcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44r8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id1cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryyni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyy0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edd0e")
}],
"loop": false,
"name": &"BombDie",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhxx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itvxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajqgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t36hk")
}],
"loop": true,
"name": &"BombWalk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wa1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_501by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baj4e")
}],
"loop": false,
"name": &"Born",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3n66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0muf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24fpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8q0u")
}],
"loop": false,
"name": &"Die",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3a30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t13lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yd2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yjhe")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qd4cn"]
size = Vector2(10, 9)

[node name="Slime" type="CharacterBody2D" groups=["Slime"]]
collision_layer = 4
collision_mask = 17
script = ExtResource("1_0knef")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_wh0lr")
animation = &"BombWalk"
autoplay = "Walk"

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(7, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-7, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_qd4cn")

[node name="RisenTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioPlayerBeAttacked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lbx1p")

[connection signal="timeout" from="RisenTimer" to="." method="_on_risen_timer_timeout"]
